changed readme file